Current Version: @@VERSION@@

ctags-5.5 (Tue Feb 25 2003)
* Changed kind indicator for methods from 'f' to 'm' [Tcl].
* Removed explicit descriptions of individual --<LANG>-types options from
  --help output. See new --list-languages and --list-kinds options.
* Removed explicit list of supported languages and supported tag kinds and
  mapping patterns from man page. See new --list-languages, --list-kinds, and
  --list-maps options.
* Renamed --<LANG>-types option to --<LANG>-kinds; still accept old name, though.
* Added --list-kinds option.
* Added --list-maps option.
* Added --list-languages option.
* Added support for dimensioned variables, contributed by Simon Bohlin [ASP].
* Added support for C# language.
* Added support for Erlang language, contributed by Brent Fulgham.
* Added support for SML (Standard ML) language, contributed by Venkatesh Prasad.
* Added mapping for .plx to Perl.
* Added tags for autocommand groups [Vim, Patch #664685].
* Added '$', 'D', and 'd' in column 1 as comment characters [Fortran].
* Added special handling of --options=NONE to disable automatic reading of
  options from configuration files or environment.
* Added check for case-insensitive filenames to configure.
* Fixed problem with lower case <SID> tag [Vim, Bug #657327].
* Fixed problem recognizing indented code [Vim, Patch #664685].
* Fixed problem with infinite loop in certain comments [PL/SQL, Bug #629115].
* Fixed problem of incorrect extension field [C, Bug #639639].
* Fixed problem of empty scoping extension field [C, Bug #639644].
* Fixed missing tags for functions split across lines [PHP, Bug #681824].
* Fixed missing tags for nested subprograms using 'contains' [Fortran, Bug #670433].
* Fixed spurious tag when an array-spec occurs within an entity-decl [Fortran].
* Fixed missing scope extension field on namespaces [C++, C#, Bug #665086].
* Fixed several bugs causing missed tags [Fortran].
* Fixed problem with --langmap option preventing clearing of map [Bug #688442].